Build on JDK 25 beside JDK 21
Annotation processors, Error Prone with NullAway and the Compiler API
tests are sensitive to compiler-version changes, so CI runs the same
build on the oldest JDK the library supports and the newest, both
compiling with --release 21. The architecture and notes documents follow
the changes of this branch: staged generation, the narrowed codec
contract, the enum decision's flyweight facts, the incremental test and
the CI matrix.